--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="fr">
 <head>
     <meta charset="utf-8">
@@ -8,13 +8,12 @@
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
-	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
+	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
 	<script src="./js/jquery-3.5.0.min.js"></script>
 	<script src="./js/bootstrap.min.js"></script>
-	<script src="./js/blocs.js"></script>
+	<script src="./js/blocs.min.js"></script>
 	<script src="./js/jquery.touchSwipe.js" defer></script>
-	<script src="./js/gmaps.js"></script>
     <title>La Panthère - Agence de Web Design</title>
 </head>
 <body>
@@ -26,7 +25,7 @@
 				<nav class="navbar row">
 					<article class="navbar-header">
 						<a class="navbar-brand" href="index.html">
-							<img src="img/agence-la-panthere-monochrome.svg" alt="paris web design logo agence web meilleure agence" height="40" />
+							<img src="img/agence-la-panthere-monochrome.svg" alt="Logo La Panthère Agence de web design à Lyon" height="40" />
 						</a>
 						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 							<span class="sr-only">Toggle navigation</span>
@@ -38,7 +37,7 @@
 					<article class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 						<ul class="site-navigation nav navbar-nav">
 							<li><a href="index.html">Accueil</a></li>
-							<li><a href="page2.html">page2 &gt;</a></li>
+							<li><a href="contact.html">Contact</a></li>
 						</ul>
 					</article>
 				</nav>
@@ -50,7 +49,7 @@
 			<article class="container bloc-lg">
 				<div class="row tight-width-whitespace">
 					<div class="col-sm-12">
-						<img src="img/logo.webp" class="center-block image-resize-mode" width="100" alt="Agence La Panthère, agence web paris, création logo paris" />
+						<img src="img/logo.webp" class="center-block image-resize-mode" width="100" alt="Logo Agence web La Panthère à Lyon" />
 						<h1 class="text-center hero-bloc-text tc-white ">Agence La Panthère</h1>
 						<div class="text-center">
 							<a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
@@ -65,7 +64,7 @@
 			<div class="container bloc-md">
 				<article class="row">
 					<div class="col-sm-12 text-center">
-						<h2>L'agence La Panthère est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet.</h2>	
+						<h2>L'agence La Panthère est une agence de web design basé à Lyon qui aide les entreprises à devenir attractives et visibles sur Internet.</h2>	
 					</div>
 				</article>
 				<section class="row voffset-lg med-width-whitespace">
@@ -122,24 +121,32 @@
 				</article>
 				<article class="row tight-width-whitespace portfolio-row">
 					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/1.webp" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.webp" alt="paris web design logo agence web meilleure agence et refonte site web journal" class="img-responsive portfolio-thumb" /></a>
+						<a href="#" data-lightbox="img/livre.webp" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb">
+							<img class="img-responsive portfolio-thumb" src="img/livre.webp" alt="Lyon web design logo agence et refonte site web journal" />
+						</a>
 						<h3 class="mg-md text-center">Refonte d'un site web pour un journal local</h3>
 						<p class="text-center">Nous avons créé une nouvelle identité visuelle pour un journal lyonnais.</p>
 					</div>
 					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/2.webp" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.webp" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour photographes" /></a>
+						<a href="#" data-lightbox="img/appareil.webp" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb">
+							<img class="img-responsive portfolio-thumb" src="img/appareil.webp" alt="Lyon web design logo agence, Création d'un site web pour photographes" />
+						</a>
 						<h3 class="mg-md text-center">Création d'un site web pour photographes</h3>
 						<p class="text-center">Nous avons conçu la plateforme idéale pour laisser place aux clichés des photographes.</p>
 					</div>
 				</article>
 				<article class="row tight-width-whitespace portfolio-row">
 					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/3.webp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.webp" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour voyageur"/></a>
+						<a href="#" data-lightbox="img/accessoire.webp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb">
+							<img class="img-responsive portfolio-thumb" src="img/accessoire.webp" alt="Lyon web design logo agence, Création d'un site web pour voyageur"/>
+						</a>
 						<h3 class="mg-md text-center">Création d'un site internet pour un voyageur</h3>
 						<p class="text-center">Nous avons élaboré un site internet et des illustrations pour sublimer les vidéos et les articles de ce voyageur.</p>
 					</div>
 					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/4.webp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.webp" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour agence de mariage" /></a>
+						<a href="#" data-lightbox="img/ordinateur.webp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb">
+							<img class="img-responsive portfolio-thumb" src="img/ordinateur.webp" alt="Lyon web design logo agence, Création d'un site web pour agence de mariage" />
+						</a>
 						<h3 class="mg-md text-center">Conception d'un site pour une agence de mariage</h3>
 						<p class="text-center">Nous avons travaillé avec cette agence pour créer un site internet permettant la présentation détaillée de leurs prestations.</p>
 					</div>
