--- a/index.html
+++ b/index.html
@@ -2,15 +2,14 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8">
-    <meta name="keywords" content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
     <meta name="description" content="Une entreprise de web design à Lyon.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="./style.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
-	<script src="./js/jquery-3.5.0.min.js"></script>
+	<script src="./js/jquery-2.1.0.min.js"></script>
 	<script src="./js/bootstrap.min.js"></script>
 	<script src="./js/blocs.min.js"></script>
 	<script src="./js/jquery.touchSwipe.js" defer></script>
@@ -20,29 +19,27 @@
 	<!-- Principal conteneur -->
 	<main class="page-container">
     	<!-- bloc-0 -->
-		<header class="bloc bgc-white l-bloc " id="bloc-0">
-			<section class="container bloc-sm">
+		<div class="bloc bgc-white l-bloc " id="bloc-0">
+			<div class="container bloc-sm">
 				<nav class="navbar row">
-					<article class="navbar-header">
-						<a class="navbar-brand" href="index.html">
-							<img src="img/agence-la-panthere-monochrome.svg" alt="Logo La Panthère Agence de web design à Lyon" height="40" />
-						</a>
+					<div class="navbar-header">
+						<a class="navbar-brand" href="index.html"><img src="./img/agence-la-panthere-monochrome.svg" alt="Lyon web design logo meilleure agence" height="40" /></a>
 						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 							<span class="sr-only">Toggle navigation</span>
-							<span class="icon-bar" title="icone humberger"></span>
-							<span class="icon-bar" title="icone humberger"></span>
-							<span class="icon-bar" title="icone humberger"></span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
 						</button>
-					</article>
-					<article class="collapse navbar-collapse navbar-1 special-dropdown-nav">
+					</div>
+					<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 						<ul class="site-navigation nav navbar-nav">
 							<li><a href="index.html">Accueil</a></li>
 							<li><a href="contact.html">Contact</a></li>
 						</ul>
-					</article>
+					</div>
 				</nav>
-			</section>
-		</header>
+			</div>
+		</div>
 		<!-- bloc-0 END -->
 		<!-- bloc-1-presentation -->
 		<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
@@ -52,7 +49,7 @@
 						<img src="img/logo.webp" class="center-block image-resize-mode" width="100" alt="Logo Agence web La Panthère à Lyon" />
 						<h1 class="text-center hero-bloc-text tc-white ">Agence La Panthère</h1>
 						<div class="text-center">
-							<a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
+							<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
 						</div>
 					</div>
 				</div>
@@ -160,7 +157,7 @@
 				<article class="row">
 					<h3 class="mg-md text-center tc-white">Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !</h3>
 					<div class="col-sm-12 text-center">
-						<a href="page2.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
+						<a href="contact.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
 					</div>
 				</article>
 			</div>
